# XWordGiver

./: .gitignore  .gitmodules  Auto.hpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  GUI.cpp  GUI.hpp  HISTORY.txt  HowToBuild.txt  Input.cpp  LICENSE-ENG.txt  LICENSE-JPN.txt  LICENSE.rtf  LICENSE.txt  MPointSizeRect.hpp  MRegKey.hpp  MScrollView.cpp  MScrollView.hpp  MScrollView_inl.hpp  Marks.cpp  Marks.hpp  PAT.txt  POLICY.txt  PointSizeRect.cpp  PointSizeRect.hpp  PointSizeRect_inl.hpp  Policy-ENG.txt  Policy-JPN.txt  README-JPN.md  README.md  ReadMe-ENG.txt  ReadMe-JPN.txt  ReadMe.txt  ReadMeEnglish.txt  Rules-ENG.txt  Rules-JPN.txt  SHA-256.cpp  SHA-256.hpp  ScrollView.cpp  (+91 more)
.github/workflows/: cmake.yml
BLOCK/: circle.emf  club.emf  diamond.emf  heart.emf  ink-save-2.emf  mario-block-1.emf  mario-block-2.emf  mario-block-3.emf  spade.emf  star.emf
DICT/: BasicDict-ENG-Freedom.tsv  BasicDict-ENG-Modesty.tsv  BasicDict-ENG2JPN-Freedom.tsv  BasicDict-ENG2JPN-Modesty.tsv  BasicDict-FRA-Freedom.tsv  BasicDict-JPN-4KanjiWords.tsv  BasicDict-JPN-Kana-Freedom.tsv  BasicDict-JPN-Kana-Modesty.tsv  BasicDict-JPN-Kanji-Freedom.tsv  BasicDict-RUS-Freedom.tsv  SubDict-JPN-Kana-4KanjiWords.tsv  SubDict-JPN-Kana-Kotowaza.tsv  SubDict-JPN-Kotowaza.tsv  dict-mockup.tsv  kana-making.txt  kanji-making.tsv  kanji-making.txt  kata-making.txt  making.txt  tags-ENG.xls  tags-JPN.xls  ★二重マス用四字熟語カナ辞書.dic  基本辞書データ（カナ、自由、タグ付き）.tsv  基本辞書データ（カナ、自由）.dic  基本辞書データ（カナ、自由）.tsv  基本辞書データ（カナ、謹慎）.dic  基本辞書データ（カナ、謹慎）.tsv  基本辞書データ（漢字、自由）.dic  基本辞書データ（漢字、自由）.tsv  基本辞書データ（英和、自由）.dic  基本辞書データ（英和、自由）.tsv  基本辞書データ（英和、謹慎）.dic  基本辞書データ（英和、謹慎）.tsv
DICT/ごみ箱/: 基本辞書データ（カナ、自由、古い）.tsv
WonSetThreadUILanguage/: LICENSE.txt  WonSetThreadUILanguage.h
dict_analyze/: CMakeLists.txt  dict_analyze.cpp  dict_analyze_res.rc  layout.h  resource.h
lang/: en_US.rc  ja_JP.rc
pat/: base.css  data.json  index.html  input.html  output.html  script.js
picojson/: picojson.h
res/: Cursor_100.cur  Cursor_32731.cur  Manifest_1.manifest
samples/: english-12x12.xd  english-5x5.xd  japanese-5x5.xwj  kanji-5x5.xd  kenjou.xwj
tests/: CMakeLists.txt  tests.hpp
tests/black_place/: CMakeLists.txt  black_place.cpp
tests/tiling/: CMakeLists.txt  tiling.cpp
