cmake_minimum_required(VERSION 3.18)
project(dict_analyze CXX RC)
add_definitions(-DUNICODE -D_UNICODE)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "-static")
endif()
add_executable(dict_analyze WIN32 dict_analyze.cpp dict_analyze_res.rc)
target_link_libraries(dict_analyze comctl32 shlwapi)
